--- a/Leaflet_Tutorial.Rmd
+++ b/Leaflet_Tutorial.Rmd
@@ -13,11 +13,10 @@ output:
     toc: no
 ---
 
-```{=html}
 <style>
 div.answer {background-color:#f3f0ff; border-radius: 5px; padding: 20px;}
 </style>
-```
+
 ```{r, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
                       eval = TRUE,
@@ -34,9 +33,9 @@ library(pacman)
 pacman::p_load(leaflet, tidyverse, htmltools, terra, sf, scales, glue, readxl, stringi)
 ```
 
-<h3><strong>Cleaning Datasets</strong></h3>
+<h3><strong>Cleaning Data sets</strong></h3>
 
-Now, we import the data sets that we are going to use. The deforestation data was collected by the [Global Forest Watch](https://www.globalforestwatch.org/) and the specific data for Colombia can be found [here](https://gfw.global/478KQ1A). The geographic files for the municipalities of Colombia are shared by [Laboratorio Urbano - Bogotá](https://bogota-laburbano.opendatasoft.com/pages/home/) and they can be accessed [here](https://bogota-laburbano.opendatasoft.com/explore/dataset/shapes/export/?location=6,4.85836,-73.2019&basemap=jawg.streets). Although, the files come in different formats, we decided to used the `Shapefile` format for this exercise.
+Now, we import the data sets that we are going to use. The deforestation data was collected by the [Global Forest Watch](https://www.globalforestwatch.org/) and the specific data for Colombia can be found [here](https://gfw.global/478KQ1A). The geographic files for the municipalities of Colombia are shared by [Laboratorio Urbano - Bogotá](https://bogota-laburbano.opendatasoft.com/pages/home/) and they can be accessed [here](https://bogota-laburbano.opendatasoft.com/explore/data set/shapes/export/?location=6,4.85836,-73.2019&basemap=jawg.streets). Although, the files come in different formats, we decided to used the `Shapefile` format for this exercise.
 
 ```{r}
 deforestation <- read_xlsx("COL.xlsx", 
@@ -54,7 +53,7 @@ map <- sf::st_read("shapes/shapes.shp",
   arrange(nombre_mpi)
 ```
 
-Since we are working with data from Colombia, some of the municipalities for the "deforestation" dataset include the accent. Thus, we use the `stri_trans_general()` function from the package `stringi`. However, since the Spanish language also uses the Ñ and the Ü, we do not want ot get rid of those. Therefore, we need to create a function:
+Since we are working with data from Colombia, some of the municipalities for the "deforestation" data set include the accent. Thus, we use the `stri_trans_general()` function from the package `stringi`. However, since the Spanish language also uses the Ñ and the Ü, we do not want ot get rid of those. Therefore, we need to create a function:
 
 ```{r, include = T}
 # Function to remove accents
@@ -67,13 +66,14 @@ deforestation$nombre_mpi <- sapply(deforestation$nombre_mpi, remove_accents)
 deforestation$nombre_dpt <- sapply(deforestation$nombre_dpt, remove_accents)
 ```
 
-<h3><strong>Merging Datasets</strong></h3>
+<h3><strong>Merging Data sets</strong></h3>
 
-After cleaning the data, we need to merge the different files. There are 91 municipalities with no data available in the deforestation dataset
+After cleaning the data, we need to merge the different files. There are 91 municipalities with no data available in the deforestation data set
 
 ```{r, include = T}
 #Merging data
 deforestation_map <- full_join(map, deforestation, by = c("nombre_mpi", "nombre_dpt"))
+save(deforestation_map, file = "deforestation_map.RData")
 
 #No matches
 not_m <- map %>%
@@ -86,6 +86,9 @@ not_m <- map %>%
 Now that we have the data needed for our map, we can create a palette of colors and some tags
 
 ```{r, include = T}
+#If you have not followed the previous steps, you can import the .RData file
+load("deforestation_map.RData")
+
 #The palette of colors is based on a scale of greens that changes based on the gained ha of trees between 2002 and 2020 by municipality
 palette <- colorNumeric(palette = "Greens", domain = deforestation_map$`gain_2000-2020_ha`)
 
@@ -110,8 +113,5 @@ leaflet() %>%
     color = "grey",
     weight = 1
   )
-<<<<<<< HEAD
 ```
-=======
-```
->>>>>>> ee085f56800250f4ef92ebf9aa5dc3ee889a6359
+
