--- a/Leaflet_Tutorial_Blank.Rmd
+++ b/Leaflet_Tutorial_Blank.Rmd
@@ -36,50 +36,21 @@ pacman::p_load(leaflet, tidyverse, htmltools, terra, sf, scales, glue, readxl, s
 
 <h2><strong>General example </strong></h2>
 ```{r, include = T}
-content <- paste(sep = "<br/>",
-  "<b><a href='http://www.samurainoodle.com'>Samurai Noodle</a></b>",
-  "606 5th Ave. S",
-  "Seattle, WA 98138"
-)
-
-leaflet() %>% addTiles() %>%
-  addPopups(-122.327298, 47.597131, content,
-    options = popupOptions(closeButton = FALSE)
-  )  
+#Read your code here
 ```
+
 <h4><strong>Customized map</strong></h4>
 ```{r, include = T}
-## Create and Customize the Base Map and the Initial View
-myMap_1 <- leaflet() %>%
-  setView(lng = 13.3892, lat = 52.5128, zoom = 12) %>% 
-  addTiles()
-print(myMap_1)
+#Read your code here
 ```
+
 <h4><strong>Adding layers</strong></h4>
 ```{r, include = T}
-
-## Add data layers, Customize
-myMap_2 <- myMap_1 %>% addCircles(
-  lng = 13.3892,   # Longitude of the circle's center
-  lat = 52.5128,   # Latitude of the circle's center
-  radius = 300,   # Radius of the circle in meters
-  color = "blue",   # Color of the circle
-)
-print(myMap_2)
+#Read your code here
 ```
 <h4><strong>Adding popups</strong></h4>
 ```{r, include = T}
-# But, we can create popups as well
-content <- paste(sep = "<br/>",
-                 "<b><a href='https://www.hertie-school.org/en/'>Hertie School</a></b>",
-                 "Friedrichstraße 180",
-                 "10117 Berlin"
-)
-  
-leaflet() %>% addTiles() %>%
-  addPopups(13.389223597194448, 52.51298665365591, content,
-            options = popupOptions(closeButton = FALSE)
-  )  
+#Read your code here
 ```
 
 <h2><strong>Practical exercise</strong></h2>
@@ -93,7 +64,7 @@ leaflet() %>% addTiles() %>%
 Now, we import the data sets that we are going to use. The deforestation data was collected by the [Global Forest Watch](https://www.globalforestwatch.org/) and the specific data for Colombia can be found [here](https://gfw.global/478KQ1A). The geographic files for the municipalities of Colombia are shared by [Laboratorio Urbano - Bogotá](https://bogota-laburbano.opendatasoft.com/pages/home/) and they can be accessed [here](https://bogota-laburbano.opendatasoft.com/explore/dataset/shapes/export/?location=6,4.85836,-73.2019&basemap=jawg.streets). Although, the files come in different formats, we decided to used the `Shapefile` format for this exercise.
 
 ```{r}
-
+#Read your code here
 ```
 
 Since we are working with data from Colombia, some of the municipalities for the "deforestation" data set include the accent. Thus, we use the `stri_trans_general()` function from the package `stringi`. However, since the Spanish language also uses the Ñ and the Ü, we do not want of get rid of those. Therefore, we need to create a function:
@@ -103,7 +74,7 @@ Since we are working with data from Colombia, some of the municipalities for the
 -   `sapply()` apply a function on a vector (i.e. column)
 
 ```{r, include = T}
-
+#Read your code here
 ```
 
 <h4><strong>Merging Data sets</strong></h4>
@@ -115,7 +86,7 @@ After cleaning the data, we need to merge the different files. There are 91 muni
 -   `anti-join()` find every field that does not match
 
 ```{r, include = T}
-
+#Read your code here
 ```
 
 <h4><strong>Getting creative with the map</strong></h4>
@@ -135,5 +106,5 @@ Now that we have the data needed for our map, we can create a palette of colors 
 -   `names(providers)` search available base maps
 
 ```{r, include = T}
-
+#Read your code here
 ```
